--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 anyio==3.6.2
 click==8.1.3
 colorama==0.4.6
+dnspython==2.3.0
+exceptiongroup==1.1.1
 fastapi==0.95.1
 greenlet==2.0.2
 h11==0.14.0
 idna==3.4
+mongoengine==0.27.0
 pydantic==1.10.7
+PyJWT==2.7.0
+pymongo==4.3.3
 PyMySQL==1.0.3
+python-dateutil==2.8.2
+python-decouple==3.8
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.11
 starlette==0.26.1
 typing_extensions==4.5.0
 uvicorn==0.22.0
-
-mongoengine~=0.27.0
